Some Spacing Fix, Reduce to 10 Tab Design

--- a/less/module.less
+++ b/less/module.less
@@ -761,12 +761,12 @@
 
 			> li {
 			
-				margin-right: 65px;
+				margin-right: 40px;
 				z-index: 2;
 
 				&:first-child {
 
-					margin-left: 33px;
+					margin-left: 36px;
 
 				}
 
@@ -831,7 +831,7 @@
 
 			> li {
 
-				margin-right: 55px;
+				margin-right: 35px;
 				border-left: 0;
 			
 	  			label {
@@ -879,7 +879,7 @@
 
 				> li {
 
-					margin-right: 32px;
+					margin-right: 30px;
 
 				}
 
@@ -1491,7 +1491,7 @@
 					content: "";
 					position: absolute;
 					background: #3a5795;
-					right: -11px;
+					right: -0.75em;
 					bottom: 0;
 					width: 10%;
 					height: 50%;
@@ -1508,7 +1508,7 @@
 
 			> li {
 
-				margin-right: 18px;
+				margin-right: 15px; 
 				border-left: 0;
 			
 	  			label {
@@ -1661,7 +1661,7 @@
 
 			> li {
 
-				margin-right: 25px;
+				margin-right: 22px;
 				border-left: 0;
 			
 	  			label {
